horizontal scroll fix on installation page

--- a/css/css-style.css
+++ b/css/css-style.css
@@ -8460,7 +8460,7 @@ h5 {
 	animation: heartbeat 0.6s ease-in infinite;
 }
 .installation-videos-wrap.open .playlist-trigger{
-	visibility: hidden;
+	display:none;
 }
 @media(min-width:992px){
 	.installation-videos-wrap.open .specs-iframe-wrap{
